objects/Investor__c.object
<CustomObject>
    <description>This object is used by Finance to store investor information. Admin permissions to this object are intentionally omitted.  Contact CFO for queries.</description>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <label>Contact Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_Round__c</fullName>
        <label>Interested Round</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>pre-IPO</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investor_Summary__c</fullName>
        <label>Investor Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Interest__c</fullName>
        <label>Level of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Contact_Date__c</fullName>
        <label>Next Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Copado_Contact__c</fullName>
        <label>Past Copado Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VC</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>Public Investor</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Investor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Interested_Round__c</columns>
        <columns>Level_of_Interest__c</columns>
        <columns>Last_Contact_Date__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Next_Round_Interest</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Interested_Round__c</columns>
        <columns>Level_of_Interest__c</columns>
        <columns>Last_Contact_Date__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interested_Round__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>Next Round Interest</label>
    </listViews>
    <nameField>
        <label>Investor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>